# verve

./: .gitignore  Cargo.toml  Dockerfile  README.md  README.zh-CN.md
assets/: verve.desktop
docs/: verve-server.md
scripts/: build.sh
src/: git.rs  http.rs  lib.rs  main.rs  mock.rs  share.rs  ssh.rs
src/state/: mod.rs  persistence.rs
src/ui/: app.rs  mod.rs  request_panel.rs  themes.rs
